mdapipkg/unpackaged/objects/ObjHirarchyTemp_del__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Region1</fullName>
                </value>
                <value>
                    <fullName>Region2</fullName>
                </value>
                <value>
                    <fullName>Region3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Search_By__c</fullName>
        <label>Search By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GAN</fullName>
                </value>
                <value>
                    <fullName>BTN</fullName>
                </value>
                <value>
                    <fullName>Customer Name</fullName>
                </value>
                <value>
                    <fullName>Order Number</fullName>
                </value>
                <value>
                    <fullName>Trouble Ticket Number</fullName>
                </value>
                <value>
                    <fullName>WTN</fullName>
                </value>
                <value>
                    <fullName>Circuit ID</fullName>
                </value>
                <value>
                    <fullName>CLLI</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>USI</fullName>
                </value>
                <value>
                    <fullName>Summary Master TN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>State1</fullName>
                </value>
                <value>
                    <fullName>State2</fullName>
                </value>
                <value>
                    <fullName>State3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <label>View</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Hierarchy</fullName>
                </value>
                <value>
                    <fullName>Location Hierarchy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>ObjHirarchyTemp</label>
    <nameField>
        <label>ObjHirarchyTemp Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ObjHirarchyTemp</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Check_for_test</fullName>
        <active>false</active>
        <errorConditionFormula>City__c ==&apos;Su&apos;</errorConditionFormula>
        <errorMessage>City canot be SU</errorMessage>
    </validationRules>
</CustomObject>